# isaac-agent-kit

./: .gitignore  README.md  pyproject.toml
src/isaac_agent_kit/: __init__.py  __main__.py  cli.py
src/isaac_agent_kit/templates/base/: AGENTS.md.jinja  CLAUDE.md.jinja
src/isaac_agent_kit/templates/base/.github/: copilot-instructions.md.jinja
src/isaac_agent_kit/templates/base/.github/instructions/: python-tests.instructions.md.jinja  python.instructions.md.jinja
src/isaac_agent_kit/templates/isaaclab/: AGENTS.md.jinja
src/isaac_agent_kit/templates/isaaclab/.github/: copilot-instructions.md.jinja
src/isaac_agent_kit/templates/isaaclab/.github/agents/: actuator-debugger.agent.md.jinja  task-author.agent.md.jinja
src/isaac_agent_kit/templates/isaaclab/.github/instructions/: isaaclab-validation.instructions.md.jinja  isaaclab.instructions.md.jinja
src/isaac_agent_kit/templates/isaaclab/.github/skills/isaaclab-actuator-debugging/: SKILL.md.jinja
src/isaac_agent_kit/templates/isaaclab/.github/skills/isaaclab-task-author/: SKILL.md.jinja
tests/: test_cli.py
